# Kezhongke_web

./: .gitignore  README.md  TODO.md  TODO_BACKEND_CONTENT.md  deploy.sh  dev_server.py  docker-compose.yml  fix_nav.py  kezhongke_nginx.conf  kezhongke_prd_v1.1.md  main.py  pyproject.toml  sync_nav.py  test_email.py
about/: code.html
alembic/: env.py
alembic/versions/: 16913dd34141_add_user_profile_fields.py  21073476d040_init.py  b81bd6ec2918_add_article_model.py  f468afac6d94_add_cover_image_to_article.py
app/: main.py
app/api/: article.py  auth.py
app/core/: config.py
app/db/: session.py
app/models/: article.py  user.py
app/services/: article.py  auth.py  content.py  email.py  jwt.py  user.py
article/: index.html
atelier/: code.html
auth/: index.html
docs/: email_sending_guide.md  work_record_2026-05-08_article_preview.md  work_record_2026-05-09.md
docs/archive/: TODO_BACKEND_CONTENT_2026-05-07.md
grow/: code.html
home/: code.html
journal/: code.html
liquid_humanism/: DESIGN.md
path/: code.html
shared/: nav.css  nav.js
