[project]
name = "kezhongke-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "alibabacloud-dm20151123>=1.9.2",
    "asyncpg>=0.31.0",
    "bcrypt==4.3.0",
    "fastapi>=0.136.1",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.14.0",
    "pydantic[email]>=2.13.4",
    "python-jose[cryptography]>=3.5.0",
    "redis>=7.4.0",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.46.0",
]
